# bsw-test

./: README.md  docker-compose.infra.yml
bet-maker/: .env.sample  Dockerfile  bet_maker_dump.sql  docker-compose.yml  pyproject.toml
bet-maker/bet_maker/: main.py
bet-maker/bet_maker/api/: __init__.py  event.py  router.py
bet-maker/bet_maker/api/bet/: __init__.py  views.py
bet-maker/bet_maker/broker/: consumer.py  message.py
bet-maker/bet_maker/config/: __init__.py  db.py  default.py  line_provider.py  rabbitmq.py
bet-maker/bet_maker/db/: config.py
bet-maker/bet_maker/db/dao/: base.py  bet.py
bet-maker/bet_maker/db/models/: bet.py
bet-maker/bet_maker/filters/: bet.py
bet-maker/bet_maker/middleware/: errors.py  exceptions.py
bet-maker/bet_maker/schemas/: bet.py  event.py  pagination.py
bet-maker/bet_maker/schemas/mixins/: time.py
bet-maker/bet_maker/services/line_provider/: lineprovider.py
bet-maker/scripts/: aerich.sh
line-provider/: .env.sample  Dockerfile  docker-compose.yml  line_provider_dump.sql  pyproject.toml
line-provider/line_provider/: main.py
line-provider/line_provider/api/: __init__.py  healthcheck.py  router.py
line-provider/line_provider/api/event/: __init__.py  views.py
line-provider/line_provider/broker/: message.py  rabbitmq.py  services.py
line-provider/line_provider/config/: __init__.py  db.py  default.py  rabbimq.py
line-provider/line_provider/db/: config.py
line-provider/line_provider/filters/: event.py
line-provider/line_provider/schemas/: event.py  pagination.py
line-provider/scripts/: aerich.sh
(+5 files in other folders)
